fix: Fix scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,3 @@
-body,
-html,
 #___gatsby,
 #gatsby-focus-wrapper {
   height: 100%;
@@ -9,6 +7,7 @@ html,
 iframe {
   border: none;
   height: 100%;
+  position: fixed;
   width: 100%;
 }
 
